--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <html>
 <head>
     <title>React DataGrid</title>
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="index.css">
 
     <style>
 
@@ -18,6 +20,7 @@
             height: 100%;
             position: absolute;
         }
+
     </style>
 </head>
 <body>
